2010-01-26  Richard Guenther  <rguenther@suse.de>

PR rtl-optimization/42685
	* web.c (web_main): Ignore DEBUG_INSNs.

	* gcc.dg/pr42685.c: New testcase.
	* g++.dg/other/pr42685.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156252 138bc75d-0d04-0410-961f-82ee72b054a4